add new header and logo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
+<!-- saved from url=(0088)file:///C:/Users/ABHIJEET/Downloads/SIT753%20Group%20Project/Deakin-Unit-Page/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title> Home </title>
-<link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
+<link rel="stylesheet" type="text/css" media="screen" href="./index_files/main.css">
 </head>
+
+ <body><div>
+    <img src="./index_files/logo.svg" alt="Deakin" width="200" height="210">
+  </div></body>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in IT</h1>
-</body>
-</html>
+
+
+</body></html>
